# llm-talk

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: basic_interview.py  batch_experiments.py  compare_models.py  custom_evaluator.py  custom_topics.py  deferred_evaluation.py
llm_talk/: __init__.py  agents.py  core.py  detectors.py  evaluators.py  formatters.py  models.py  progress.py  templates.py
tests/: test_agents.py  test_core.py  test_detectors.py  test_evaluators.py  test_formatters.py  test_models.py
